src/objects/Rating_Change__c.object
<CustomObject>
    <description>Consultant strategy rating process, when rating upgraded, downgraded, or maintained.</description>
    <fields>
        <fullName>Consultant_Rating__c</fullName>
        <label>Consultant Rating</label>
        <referenceTo>Consultant_Rating__c</referenceTo>
        <relationshipLabel>Rating Changes</relationshipLabel>
        <relationshipName>Rating_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Changed__c</fullName>
        <label>Date Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_MFS_Rating_Requested__c</fullName>
        <label>New MFS Rating Requested</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Rated</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Rating_Requested__c</fullName>
        <label>New External Rating Requested</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Change_Reason__c</fullName>
        <label>Rating Change Reason</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Rating_Change_Type__c</fullName>
        <label>Rating Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isApproved</label>
        <type>Checkbox</type>
    </fields>
    <label>Rating Change</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rating Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>